Changelog
=========

2.1.6 (unreleased)
------------------

- Calculate the localized datetime string based on UTC time. Refs
  https://dev.plone.org/ticket/12197.
  [malthe, ajung]

- Replace getParentNode() with __parent__ / aq_parent as appropriate.
  [elro]

2.1.5 (2011-10-06)
------------------

- Enable sorting by the getObjPositionInParent index.
  [davisagli]


2.1.4 (2011-08-31)
------------------

- Avoid critical error if for any reason,
  constrain type mode is set to ACQUIRE on a folder at the root level.
  Refs http://dev.plone.org/plone/ticket/11950#comment:3
  [yulka, thomasdesvenain]

- Fixed a bug in listSubtopics that caused unauthorized exceptions when
  subtopics were private
  [afd]

- Make relatedItems sortable. Fixes http://dev.plone.org/plone/ticket/12098
  [fRiSi]

2.1.3 (2011-07-12)
------------------

- PortalType-criteria should use archetype_name as value when querying for the
  Type-index. Fixes http://dev.plone.org/plone/ticket/11913
  [WouterVH]

- NonRefCatalogContent-objects, e.g. criteria, should not obtain a UUID.
  Fixes http://dev.plone.org/plone/ticket/11904
  [WouterVH]

- When a folder is not of the same type than its parent,
  if this folder acquires constraint,
  the allowed types are the intersection of globally allowed types in folder
  and locally allowed types of its parent.
  This fixes http://dev.plone.org/plone/ticket/11950.
  [thomasdesvenain]

- For collections displayed in table view, show localized date-format.
  Fixes http://dev.plone.org/plone/ticket/11155
  [WouterVH]

- Fixed: adding a disallowed subobject raises ValueError instead of Unauthorized
  if disallow is related to content types restriction.
  [thomasdesvenain]

- Activate manual sorting on relatedItems field.
  [toutpt]

2.1.2 (2011-05-12)
------------------

- Use DateTime's built-in support to do `datetime.datetime` conversions.
  [hannosch]

- Fixed `atdocument` tests to be compatible with Archetypes 1.7.5.
  [hannosch]
